[gd_scene load_steps=6 format=3 uid="uid://d3uwhp7cbtt7a"]

[ext_resource type="Texture2D" uid="uid://bk3ggjp5ym4uf" path="res://images/sprites/table.png" id="1_x56ak"]
[ext_resource type="Script" path="res://scripts/components/sccHidingSpot.gd" id="2_7ky01"]
[ext_resource type="Theme" uid="uid://yo85ef7wg3gc" path="res://design/OutlinedLabel.tres" id="3_8lnkj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2ooas"]
radius = 16.5
height = 46.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7sjk7"]
radius = 13.0

[node name="HidingSpot" type="CharacterBody2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.2, 0.117647, 1)
position = Vector2(0, -24)
texture = ExtResource("1_x56ak")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2ooas")

[node name="Interaction" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("2_7ky01")

[node name="InteractionArea" type="CollisionShape2D" parent="Interaction"]
position = Vector2(1, -13)
shape = SubResource("CircleShape2D_7sjk7")
debug_color = Color(0, 0.996078, 0, 0.419608)

[node name="HideCooldown" type="Timer" parent="."]
one_shot = true

[node name="HideWarmup" type="Timer" parent="."]
one_shot = true

[node name="HideWarmupBar" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = -46.0
offset_right = 16.0
offset_bottom = -42.0
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Label" type="Label" parent="HideWarmupBar"]
layout_mode = 0
offset_left = -32.0
offset_top = -18.0
offset_right = 64.0
offset_bottom = -5.0
theme = ExtResource("3_8lnkj")
text = "Hiding!"
horizontal_alignment = 1
vertical_alignment = 2
